--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html>
+<body style="background-color:powderblue;">
+
+<h1><center><font color="#9933ff">Alexa Morales</font></center><h1>
+<h3><center><font color="#9933ff">Welcome, this is my website!</font><center></h3>
+<h3><center>Contact info: IG: alexaamb_ Twitter: alexaan92000 Email: alexaan92000@gmail.com</center></h3>
+<center><img src="vscopic.jpg" width="230" height="400"></center>
+
+<p><font color="#b800e6">BIO:</font></p>
+<p>My name is Alexa Morales I'm a 16 year old Chicana living in East Palo Alto, CA. I am  a senior at Palo Alto High (PALY)</p>
+
+<p><font color="#b800e6">FUN FACTS:</font></p>
+<p>1) I was the president of the Latinos Unidos club at my school :) </p>
+<p>2) I love horses so much that I have one, I ride western.</p>
+<p>3) I was part of Facebook Academy and got to spend 6 weeks at facebook last summer.</p>
+<p>4) My eyes are green</p>
+<p>5) I speak Spanish</p>
+<p>6) I used to have a snapping problem.</p>
+
+
+
+
+</body>
+</html>
 
