--- a/aboutme.html
+++ b/aboutme.html
@@ -1,26 +1,114 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:powderblue;">
+<head>
 
-<h1><center><font color="#9933ff">Alexa Morales</font></center><h1>
-<h3><center><font color="#9933ff">Welcome, this is my website!</font><center></h3>
-<h3><center>Contact info: IG: alexaamb_ Twitter: alexaan92000 Email: alexaan92000@gmail.com</center></h3>
-<center><img src="vscopic.jpg" width="230" height="400"></center>
+</head>
+<body>
 
-<p><font color="#b800e6">BIO:</font></p>
-<p>My name is Alexa Morales I'm a 16 year old Chicana living in East Palo Alto, CA. I am  a senior at Palo Alto High (PALY)</p>
 
-<p><font color="#b800e6">FUN FACTS:</font></p>
-<p>1) I was the president of the Latinos Unidos club at my school :) </p>
-<p>2) I love horses so much that I have one, I ride western.</p>
-<p>3) I was part of Facebook Academy and got to spend 6 weeks at facebook last summer.</p>
-<p>4) My eyes are green</p>
-<p>5) I speak Spanish</p>
-<p>6) I used to have a snapping problem.</p>
+<style type="text/css"> 
+#name {
+	color: black;
+
+}
+.content {
+	color:black;
+}
+
+
+
+p    {color: black;
+		font-size: 16px;}
+
+div.footer {
+    padding: 0.5em;
+    color: white;
+    background-color: gray;
+    clear: left;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: inline-block;
+    color: white;
+    margin-left: 200px;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111;
+}
+element.style {
+}
+
+.container {
+    position: relative;
+}
+
+.center {
+    position: absolute;
+    left: 1;
+    top: 50%;
+    width: 100%;
+    
+    font-size: 40px;
+}
+
+img { 
+    width: 100%;
+    height: auto;
+    opacity: 1;
+}
+
+</style>
+
+
+<center><h1 id = "name">Alexa Morales</h1></center>
+
+
+<ul>
+  <li><a href="aboutme.html">Home</a></li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="contact.html">Contact</a></li>
+  <li><a href="projects.html">Projects</a></li>
+</ul>
+
+
+
+
+
+
+
+<div class="container">
+  <img src="welcomephoto.jpg"width="345" height="200">
+</div>
+
+
+
+
+
+<!--bio--> 
+	<p><center>High school senior trying to do great things. </center></p>
+
+
 
 
 
 
 </body>
+
 </html>
 
